# cargo-dist-test

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: release.yml
