[package]
name = "cargo-dist-test"
version = "0.1.1"
edition = "2021"
description = "Test of cargo-dist"
authors = ["John Thorvald Wodder II <cargo-dist-test@varonathe.org>"]
repository = "https://github.com/jwodder/cargo-dist-test"
license = "MIT"
exclude = ["/.*"]
publish = false

[dependencies]

[profile.release]
lto = true
strip = true

[profile.dist]
inherits = "release"

[workspace.metadata.dist]
cargo-dist-version = "0.0.5"
rust-toolchain-version = "stable"
ci = ["github"]
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]
#targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "i686-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-pc-windows-msvc", "x86_64-unknown-linux-gnu"]
installers = ["shell", "powershell"]

[workspace.metadata.release]
sign-tag = true
pre-release-commit-message = "Version {{version}}"
tag-message = "Version {{version}}"
#pre-release-hook = ???

[[workspace.metadata.release.pre-release-replacements]]
file = "README.md"
search = "cargo-dist-test = .*"
replace = "{{crate_name}} = \"{{version}}\""
